apps/base/notifiarr/deployment.yaml
#
# Reference:
# https://docs.linuxserver.io/images/docker-bazarr/
# https://github.com/morpheus65535/bazarr
#

apiVersion: v1
kind: Service
metadata:
  name: notifiarr
  namespace: kube-system
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: notifiarr
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: notifiarr
  type: ClusterIP
  ports:
    - name: http
      port: 5454
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifiarr
  namespace: kube-system
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: notifiarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: notifiarr
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: notifiarr
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: abaddon
      hostname: notifiarr
      containers:
        - name: notifiarr
          image: golift/notifiarr:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5454
              protocol: TCP
          volumeMounts:
            - name: notifiarr-pvc
              mountPath: /config
            - name: machine-id
              mountPath: /etc/machine-id
              readOnly: true
            - name: utmp
              mountPath: /var/run/utmp
          securityContext:
            privileged: true
            runAsUser: 0
            runAsGroup: 0
            fsgroup: 0
      volumes:
        - name: notifiarr-pvc
          persistentVolumeClaim:
            claimName: notifiarr-pvc
        - name: utmp
          hostPath:
            path: /var/run/utmp
            type: Directory
        - name: machine-id
          hostPath:
            path: /etc/machine-id
            type: File
