apps/base/notifiarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: notifiarr-dashboard-https
  namespace: kube-system
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: notifiarr-dashboard-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`notifiarr.powell.place`)
      kind: Rule
      middlewares:
        - name: security
          namespace: kube-system
      services:
        - name: notifiarr
          port: http
